tests/bad/functions/3.moc
int main(int a) {
    main("enseeiht");
}

